--- a/htmleffect/static/slide-show.html
+++ b/htmleffect/static/slide-show.html
@@ -591,8 +591,8 @@
                         <div class="slide-desc">For smaller screens, the items on the right hand side will become less opaque and serve as decoration only. The focus will be on the description which will occupy all the width.</div>
                     </div>
                     <div class="col-md-7 slide-imgs">
-                        <img class="slide-img-h" src="image/slide-show/7.jpg">
-                        <img class="slide-img-h" src="image/slide-show/8.jpg">
+                        <img class="slide-img-v" src="image/slide-show/9.jpg">
+                        <img class="slide-img-v" src="image/slide-show/10.jpg">
                     </div>
                 </div>
             </li>
@@ -603,8 +603,8 @@
                         <div class="slide-desc">For the "line" navigation we use a little trick to make the clickable area a bit bigger: we add a thick white border to the top and bottom of the span. Since the border is part of the element, it will be part of the clickable zone.</div>
                     </div>
                     <div class="col-md-7 slide-imgs">
-                        <img class="slide-img-h" src="image/slide-show/7.jpg">
-                        <img class="slide-img-h" src="image/slide-show/8.jpg">
+                        <img class="slide-img-h" src="image/slide-show/11.jpg">
+                        <img class="slide-img-h" src="image/slide-show/12.jpg">
                     </div>
                 </div>
             </li>
