--- a/htmleffect/static/slide-show.html
+++ b/htmleffect/static/slide-show.html
@@ -484,12 +484,12 @@
             // inEffect = "slide-right-in";
 
             // 纠正下效果
-            if([1, 3, 5].indexOf(index) > -1){
-                outEffect = (outEffect == "slide-down-out") ? "slide-up-out" : outEffect;
-                outEffect = (outEffect == "slide-right-out") ? "slide-left-out" : outEffect;
-                inEffect = (inEffect == "slide-right-in") ? "slide-left-in" : inEffect;
-                inEffect = (inEffect == "slide-down-in") ? "slide-up-in" : inEffect;
-            }
+            // if([1, 3, 5].indexOf(index) > -1){
+            //     outEffect = (outEffect == "slide-down-out") ? "slide-up-out" : outEffect;
+            //     outEffect = (outEffect == "slide-right-out") ? "slide-left-out" : outEffect;
+            //     inEffect = (inEffect == "slide-right-in") ? "slide-left-in" : inEffect;
+            //     inEffect = (inEffect == "slide-down-in") ? "slide-up-in" : inEffect;
+            // }
 
             prev.removeClass('active');
             prev.addClass('s-hide');
@@ -529,6 +529,15 @@
             target.addClass('active');
             transform(parseInt(target.data('index')));
         });
+
+        // 自动跳转
+        window.setInterval(function(){
+            var currentIndex = $('.slide-nav-item.active').data('index') + 1;
+            
+            currentIndex = (currentIndex >= $('.slide-nav-item').length) ? 0 : currentIndex;
+            
+            $('.slide-nav-item').eq(currentIndex).click();
+        }, 6000);
 
     });
     </script>
